<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_general_title"
        android:key="pref_general">
    <SwitchPreference
        android:defaultValue="true"
        android:key="enable_notifications"
        android:summary="@string/pref_description_notifications"
        android:title="@string/pref_title_notifications" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="display_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_russian_cursewords"
        android:entryValues="@array/pref_russian_cursewords"
        android:key="russian_curses"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_russian_cursewords"
        android:summary="@string/pref_description_russian_cursewords"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_help_title">
    <Preference android:title="@string/prefs_web_page"
        android:summary="@string/pref_help_description">
        <intent android:action="android.intent.action.VIEW"
            android:data="https://www.google.com" />
    </Preference>
    </PreferenceCategory>
</PreferenceScreen>
