<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/userAvatar"
        app:srcCompat="@drawable/ic_person_black_24px"
        android:id="@+id/userAvatar"/>

    <Spinner
        android:id="@+id/userStatusSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical"
        android:layout_alignParentEnd="true" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/user_status"
        app:srcCompat="@drawable/status_circle_black"
        android:id="@+id/userStatusIcon"
        android:layout_toStartOf="@id/userStatusSpinner"/>
    <!--<TextView-->
        <!--android:id="@+id/userStatus"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:gravity="center_vertical"-->
        <!--android:layout_marginEnd="@dimen/text_margin"-->
        <!--android:text="@string/offline"-->
        <!--android:drawableStart="@drawable/status_circle_black"-->
        <!--android:layout_alignParentEnd="true" />-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userName"
        android:textSize="20sp"
        android:layout_marginStart="@dimen/default_margin"
        android:textStyle="bold"
        android:text="@string/default_name"
        android:layout_toEndOf="@id/userAvatar"
        android:layout_toStartOf="@id/userStatusIcon"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userEmail"
        android:layout_margin="@dimen/default_margin"
        android:textSize="15sp"
        android:text="@string/default_email"
        android:layout_below="@id/userName"
        android:layout_toEndOf="@id/userAvatar"/>

    <android.support.v7.widget.AppCompatButton
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:id="@+id/logout_button"
        android:background="@drawable/ic_logout_black_24px"
        android:layout_margin="@dimen/default_margin"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/userStatusSpinner"/>

</RelativeLayout>