<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:mContext="com.evilcorp.firebaseintegration.ui.register.RegisterFragment"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageButton
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/userAvatar"
            android:id="@+id/add_picture_button"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_add_a_photo_black_24px"
            android:scaleType="centerCrop"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/name_inputlayout"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/add_picture_button">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name_edittext"
                android:hint="@string/prompt_name"
                android:textSize="15sp"
                android:inputType="textEmailAddress"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/country_inputlayout"
            app:layout_constraintTop_toBottomOf="@+id/name_inputlayout"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/add_picture_button">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/country_edittext"
                android:hint="@string/prompt_country"
                android:textSize="15sp"
                android:inputType="textEmailAddress"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/email_inputlayout"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/country_inputlayout">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email_edittext"
                android:hint="@string/prompt_email"
                android:textSize="15sp"
                android:inputType="textEmailAddress"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/repeat_email_inputlayout"
            app:layout_constraintTop_toBottomOf="@+id/email_inputlayout"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/repeat_email_edittext"
                android:hint="@string/prompt_repeat_email"
                android:textSize="15sp"
                android:inputType="textEmailAddress"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/password_inputlayout"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@+id/repeat_email_inputlayout"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password_edittext"
                android:hint="@string/prompt_password"
                android:textSize="15sp"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:id="@+id/repeat_password_inputlayout"
            app:layout_constraintTop_toBottomOf="@+id/password_inputlayout"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/repeat_password_edittext"
                android:hint="@string/prompt_repeat_password"
                android:imeActionId="@+id/login"
                android:textSize="15sp"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/go_back_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/go_back_text"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@+id/repeat_password_inputlayout"
            app:layout_constraintRight_toLeftOf="@+id/fragment_register_button"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/fragment_register_button"
            style="?android:textAppearanceSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/action_register"
            android:background="@color/colorAccent"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@+id/repeat_password_inputlayout"
            app:layout_constraintLeft_toRightOf="@+id/go_back_button"/>
    </android.support.constraint.ConstraintLayout>
</ScrollView>
